force-app/main/default/objects/Price_Batch_Line__c/Price_Batch_Line__c.object-meta.xml
<CustomObject>
    <label>Linea de Lote de Precios</label>
    <nameField>
        <displayFormat>LLP-{00000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lineas de Lote de Precios</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>