force-app/main/default/objects/Price_Batch_Line__c/fields/Price_Batch__c.field-meta.xml
<CustomField>
    <fullName>Price_Batch__c</fullName>
    <label>Lote de Precios</label>
    <referenceTo>Price_Batch__c</referenceTo>
    <relationshipLabel>Lineas de Lote de Precios</relationshipLabel>
    <relationshipName>Lineas_de_Lote_de_Precios</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>