force-app/main/default/objects/Price_Batch_Line__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Producto</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Lineas de Lote de Precios</relationshipLabel>
    <relationshipName>Lineas_de_Lote_de_Precios</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>