force-app/main/default/objects/Price_Batch_Line__c/fields/Unit_Cost_GTQ__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cost_GTQ__c</fullName>
    <label>Costo (Q)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>