force-app/main/default/objects/Price_Batch_Line__c/fields/Unit_Price_GTQ__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_GTQ__c</fullName>
    <label>Precio de Venta (Q)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>